Changed method of displaying difficulty text to using a map and fixed text spilling on smaller screens

--- a/src/components/DifficultyExplanation/DifficultyExplanation.css
+++ b/src/components/DifficultyExplanation/DifficultyExplanation.css
@@ -15,6 +15,5 @@
 
 .displayInfo{
     word-wrap: break-word;
-    font-size: 70%;
-    
+    font-size: 0.9vw;
 }
